shared/css/recipes.css
@import url('https://fonts.cdnfonts.com/css/switzer');

:root {
    --base-clr: white;
    --line-clr: #535353;
    --hover-clr: #d5d5d5;
    --text-clr: #141C24;
    --accent-clr: #DC242C;
    --secondary-text-clr: #989898;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: Switzer, sans-serif;
    line-height: 1.5rem;
}

body {
    /* background-color: #fafafa; */
    /* background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
}

main {
    padding: 20px;
}

.recipesContainer {
    display: flex;
    flex-direction: column;
    gap: 25px;
}

.recipesNav {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    gap: 10px;
}

.recipesNav > h1 {
    display: flex;
    margin-right: auto;  /* pushes the recipe title to the left */
    align-items: center;
    font-size: 30px;
    font-weight: bold;
}


/* --------------------------------------------------------- */

/* Search Bar */
/* https://www.youtube.com/watch?v=f6ocDCkCmhM */

.searchContainer {
    display: flex; /* Makes .search and .searchButton align horizontally */
    align-items: stretch;
    transition: box-shadow 0.25s;
    border-radius: 5px;
}

/* .searchContainer:focus-within {
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.75);
} */

.search {
    --padding: 14px;

    display: flex;
    align-items: center;
    padding: var(--padding);
    border: solid 2px #D9D9D9;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    background: #F8F8F8;
    flex-grow: 1;
}

.searchInput {
    font-size: 18px;
    font-family: Switzer, sans-serif;
    color: #333;
    margin-left: var(--padding);
    outline: none;
    border: none;
    background: transparent;
    flex: 1;
}

.searchInput::placeholder,
.searchIcon {
    color: rgba(0,0,0, 0.5);
}

.searchButton {
    width: auto;
    padding: 0 var(--padding);
    display: flex;
    align-items: center;
    justify-content: center;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    background: black;
}

.searchButton > button {
    padding: 0px 20px;  /* horizontal padding shorthand */
    font-size: 18px;
    font-family: Switzer, sans-serif;
    font-weight: bold;
    color: #ffffff;
    margin-left: var(--padding);
    outline: none;
    border: none;
    background: transparent;
    cursor: pointer;
    transition: color 0.15s;
}

.searchButton > button:hover {
    color: var(--accent-clr);
}


/* Add New Recipe Button */
.addRecipeButton {
    padding: 0 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    background: black;
    height: 100%;
    /* Helps prevent the text from wrapping*/
    flex-grow: 0; /* Prevent from growing excessively */
    flex-shrink: 0; /* Prevent shrinking */
}

.addRecipeButton > button {
    padding: 14px;
    font-size: 18px;
    font-family: Switzer, sans-serif;
    font-weight: bold;
    color: #ffffff;
    outline: none;
    border: none;
    background: transparent;
    cursor: pointer;
    transition: color 0.15s;
}

.addRecipeButton > .addIcon {
    color: white;
}

.addRecipeButton > button, 
.addRecipeButton > .addIcon {
    transition: color 0.1s ease-in-out;
}

.addRecipeButton:hover > button, 
.addRecipeButton:hover > .addIcon {
    color: var(--accent-clr);
}


/* --------------------------------------------------------- */

/* Filter Options */
/* https://www.youtube.com/watch?v=RKfMtCNx1z0 */

.filterContainer {
    display: flex;
    align-items: center;
    gap: 10px;
}

.filterContainer > .filterLabel {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 18px;
    font-weight: 600;
    margin-right: 20px;
    flex-grow: 0; /* Prevent from growing excessively */
    flex-shrink: 0; /* Prevent shrinking */
}

.filterOptions {
    display: flex;
    align-items: center;
    gap: 10px;
}


.filterOptions > button {
    padding: 5px 12px;
    border-radius: 30px;
    font-size: 15px;
    font-weight: 600;
    cursor: pointer;
    border: 2px solid #D9D9D9; 
    background: #F8F8F8;
    color: #89898E;
    /* Helps prevent the text from wrapping*/
    flex-grow: 0; /* Prevent from growing excessively */
    flex-shrink: 0; /* Prevent shrinking */
    transition: all 0.15s ease-in-out;
    
}

.filterOptions > button:hover {
    background: var(--accent-clr);
    color: white;
    border: 2px solid var(--accent-clr); 
}

.filterOptions > button.active {
    scale: 1.05;
    background: black;
    color: white;
    border: none;
}


/* --------------------------------------------------------- */

/* Recipe Cards */
/* https://www.youtube.com/watch?v=RKfMtCNx1z0 5:05 */
.recipeCards {
    display: grid;
    margin-top: 25px;
    grid-template-columns: repeat(2, 1fr);  /* Creates two columns with equal width */
    gap: 20px;
}

.card {
    display: flex;
    gap: 20px;
    border-radius: 10px;
    padding: 15px;
    background: #F8F8F8;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    /* transition: 0.15s ease-in-out; */
    /* Can't choose between these 2 */
    transition: 0.15s ease;
}

.card:hover {
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.75);
    scale: 1.02;
}

.card img {
    max-width: 100%;
    max-height: 150px; 
    border-radius: 10px;
    background: white;
    object-fit: cover; 
}

.cardBody {
    display: flex;
    flex-direction: column;
    gap: 10px;
    flex-grow: 1;
}

.scrollableTable {
    max-height: 225px;  /* maybe adjust this to be relative instead of hardcoding size*/
    overflow-y: auto;   /* Enables vertical scrolling */
}

/* TODO: EDIT TABLE BECAUSE IT SUCKS */
table {
    width: 100%;
    border-collapse: collapse;
    border: 2px solid rgb(200,200,200);
    letter-spacing: 1px;
    font-size: 0.8rem;
  }
  
  td, th {
    border: 1px solid rgb(190,190,190);
    padding: 10px 20px;
  }
  
  th {
    background-color: rgb(235,235,235);
  }
  
  td {
    text-align: center;
  }
  
  tr:nth-child(even) td {
    background-color: rgb(250,250,250);
  }
  
  tr:nth-child(odd) td {
    background-color: rgb(245,245,245);
  }
  
  caption {
    padding: 10px;
  }

.actionButtons {
    display: flex;
    justify-content: end;
    align-items: stretch;
    gap: 10px;    
}

.actionButtons .editRecipeButton,
.actionButtons .deleteRecipeButton {
    padding: 10px 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    gap: 10px;
    height: 100%;
    /* Helps prevent the text from wrapping*/
    flex-grow: 0; /* Prevent from growing excessively */
    flex-shrink: 0; /* Prevent shrinking */
}

.actionButtons .editRecipeButton {
    background: black;
    cursor: pointer;
}

.actionButtons .deleteRecipeButton {
    background: var(--accent-clr);
    cursor: pointer;
}

.actionButtons button {
    font-size: 16px;
    font-weight: bold;
    color: #ffffff;
    outline: none;
    border: none;
    background: transparent;
    cursor: pointer;
    transition: color 0.15s;
}


.actionButtons .editIcon,
.actionButtons .deleteIcon {
    color: white;
}


/* Responsive Design */
/* Stack cards in one column on small screens */
@media (max-width: 768px) {
    .recipeCards {
        grid-template-columns: 1fr;  
    }
}

/* --------------------------------------------------------- */

